--- a/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
@@ -85,6 +85,14 @@
       }
     }
   }
+  &.sxt-max-sm {
+    .sxt-main-tabs {
+      .btn-group.sxt-panel-button {
+        margin-left: 29.7em;
+      }
+    }
+  }
+
 }
 
 .portlet-borderless-container [gn-metadata-display].sxt-scroll {
